fix: backdrop-filter not working on Safari

--- a/themes/jw1dev/source/style/page.scss
+++ b/themes/jw1dev/source/style/page.scss
@@ -422,6 +422,7 @@ footer {
   padding: 15px;
   background: rgba(255,255,255,.8);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 6px;
   box-shadow: 0 5px 15px rgba(0,0,0,.1);
   font-size: 14px;
