--- a/themes/jw1dev/source/style/style.css
+++ b/themes/jw1dev/source/style/style.css
@@ -341,6 +341,7 @@ footer a {
   padding: 15px;
   background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   border-radius: 6px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   font-size: 14px;
